# cryovial

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose-cryovial.yml  entrypoint.sh  pyproject.toml  rbac.yml  sshd_config  stack.yml
.pebbles/: config.json  events.jsonl
ansible/: site.yml
ansible/inventory/: kelce.yml
ansible/roles/cryovial/tasks/: main.yml
ansible/roles/cryovial_service/defaults/: main.yml
ansible/roles/cryovial_service/handlers/: main.yml
ansible/roles/cryovial_service/tasks/: main.yml
ansible/roles/cryovial_service/templates/: cryovial.service.j2  env.j2  services.yml.j2
ansible/roles/prerequisites/tasks/: main.yml
deployment/: config.env  spec.yml
docs/: ROADMAP.md  github-app-setup.md
src/cryovial/: cli.py  deploy.py  server.py
tests/: test_cli.py  test_deploy.py
